2004-03-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/faq/gst-uninstalled:
          adding gst-monkeysaudio to the list of possible plugin dirs

2004-03-16  David Schleef  <ds@schleef.org>

	* gst/gst.c: (gst_get_popt_options), (gst_init_get_popt_table),
	(gst_init_check_with_popt_table):  Fix some gettext strings to
	make them easier to translate.  Required making the strings
	non-const.

2004-03-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: bump nano to 1

=== release 0.8.0 ===

2004-03-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: release 0.8.0, "Executive Slacks"

2004-03-16  Johan Dahlin  <johan@gnome.org>

	* gst/schedulers/gstoptimalscheduler.c
	(gst_opt_scheduler_pad_unlink): Remove double ;,
        spotted by Scott Wheeler

2004-03-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: bump libtool version

2004-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstcaps.h:
	* gst/gststructure.h:
          add reserved padding

2004-03-15  Benjamin Otte  <otte@gnome.org>

	* gst/elements/gstfdsrc.c: (gst_fdsrc_get):
	  set the first parameter for select call correctly.
	  (fixes #137230)

2004-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* *.c,*.h: don't mix tabs and spaces

2004-03-15  Johan Dahlin  <johan@gnome.org>

	* gst/schedulers/gstoptimalscheduler.c
	(gst_opt_scheduler_pad_unlink): Fix bug that causes totem to
	crash on MPEG playback. My boolean arithmetic is a bit rusty.

	* tools/Makefile.am (EXTRA_DIST): Add gst-indent
	
2004-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/Rules:
          fix gst-register rules

2004-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/Rules:
          use versioned gst-register

2004-03-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/libs/gstreamer-libs-sections.txt:
          remove </SUBSECTION>