@@ -50,21 +50,6 @@ EXTRA_DIST = gstreamer.spec.in gst-element-check.m4 \
 
 CLEANFILES = gst-element-check-@GST_MAJORMINOR@.m4
 
-
-# to do a release, run "make release"
-# this will generate all archives and md5sums
-
-# make bz2 as well
-AUTOMAKE_OPTIONS = dist-bzip2
-
-release: dist
-	make @PACKAGE@-@VERSION@.tar.gz.md5
-	make @PACKAGE@-@VERSION@.tar.bz2.md5
-
-# generate md5 sum files
-%.md5: %
-	md5sum $< > $@
-
 dist-hook:
 	cp gstreamer.spec $(distdir)
 	rm -rf `find $(distdir)/common -name CVS`
@@ -115,3 +100,5 @@ check-coverage:
 	echo "Need to reconfigure with --enable-gcov"
 
 endif
+
+include $(top_srcdir)/common/release.mak
